feat: register a serviceWorker

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -12,5 +12,7 @@
   "scope": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color": "#ffffff",
+  "dir": "ltr",
+  "lang": "en-US"
 }
